Make overflow-x auto to fix constant scrollbars

--- a/source/css/screen.css.sass
+++ b/source/css/screen.css.sass
@@ -25,7 +25,7 @@ body
 .highlight
   background: #eee
   padding: 18pt
-  overflow-x: scroll
+  overflow-x: auto
 
   &.c
     font-style: normal
